created the header and top bar

--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>TGIV</title>
 </head>
 <body>
+    <div class="top-bar">
+        <div class="top-bar__info-box">
+            <span class="top-bar__address">9 Winkler Pl, Chester, NY 10918</span>
+            <span class="top-bar__phone">(845)469-4423</span>
+        </div>
+        <div class="top-bar__icon-box">
+            <svg class="top-bar__icon">
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
+            <svg class="top-bar__icon">
+                <use xlink:href="img/sprite.svg#icon-instagram"></use>
+            </svg>
+        </div>
+    </div>
     <header class="header">
         <div class="header__text-box">
             <h1 class="heading-primary">Thank Goodness It's Vegan</h1>
             <h3 class="heading-secondary">Vegan Soul Food Made With Love</h3>
         </div>
     </header>
+    <main>
+        <section class="section-welcome">
+            <h1 class="heading-main heading-main--blue">Welcome to TGIV!</h1>
+        </section>
+        <section class="section-about">
+            <div class="section-about__text-box">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus consequuntur 
+                veritatis fugiat cupiditate iure corrupti sint, necessitatibus 
+                soluta commodi, tempore autem natus
+                 magnam laboriosam error rem minus, voluptas officia eaque?
+            </div>
+            <div class="section-about__image">
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
