Started about section

--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
     <header class="header">
         <div class="header__text-box">
             <h1 class="heading-primary">Thank Goodness It's Vegan</h1>
-            <h3 class="heading-secondary">Vegan Soul Food Made With Love</h3>
+            <h2 class="heading-secondary">Vegan Soul Food Made With Love</h2>
         </div>
     </header>
     <main>
         <section class="section-welcome">
-            <h1 class="heading-main heading-main--blue">Welcome to TGIV!</h1>
+            <h3 class="heading-main heading-main--blue">Welcome to TGIV!</h3>
         </section>
         <section class="section-about">
             <div class="section-about__text-box">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus consequuntur 
-                veritatis fugiat cupiditate iure corrupti sint, necessitatibus 
-                soluta commodi, tempore autem natus
-                 magnam laboriosam error rem minus, voluptas officia eaque?
+                <h3 class="heading-main heading-main--white">About</h3>
+                <p class="paragraph paragraph--white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus consequuntur 
+                    veritatis fugiat cupiditate iure corrupti sint, necessitatibus 
+                    soluta commodi, tempore autem natus
+                     magnam laboriosam error rem minus, voluptas officia eaque?</p>
             </div>
-            <div class="section-about__image">
-                
-            </div>
+            <div class="section-about__image"></div>
         </section>
     </main>
 </body>
