--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
         <div class="header__text-box">
             <h1 class="heading-primary">Thank Goodness It's Vegan</h1>
-            <h2 class="heading-secondary">Vegan Soul Food Made With Love</h2>
+            <h2 class="heading-secondary">Anything You Can Do I Can Do Vegan!</h2>
         </div>
     </header>
     <main>
@@ -33,13 +33,63 @@
         </section>
         <section class="section-about">
             <div class="section-about__text-box">
-                <h3 class="heading-main heading-main--white">About</h3>
-                <p class="paragraph paragraph--white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus consequuntur 
-                    veritatis fugiat cupiditate iure corrupti sint, necessitatibus 
-                    soluta commodi, tempore autem natus
-                     magnam laboriosam error rem minus, voluptas officia eaque?</p>
+                <h3 class="heading-main heading-main--white margin-bottom-small">About</h3>
+                <p class="paragraph paragraph--white">Thank Goodness It's Vegan started out as a food truck located in Chester NY.  Exactly one year later, TGIV, the restaurant opened! Serving up 100% vegan food that is more than just a standard salad.</p>
             </div>
             <div class="section-about__image"></div>
+        </section>
+        <section class="section-menu">
+            <h3 class="heading-main heading-main--brown margin-bottom-small margin-top-small">Menu</h3>
+            <div class="section-menu__container">
+                <div class="section-menu__starters">
+                <h3 class="heading-main-secondary heading-main-secondary--blue margin-bottom-small">Starting Lineup</h3>
+                    <ul class="section-menu__list">
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title">Shroom Basket</h5>
+                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
+                            <span class="section-menu__price">$9.95</span>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title"></h5>
+                            <p class="section-menu__description"></p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-menu__mains">
+                    <h3 class="heading-main-secondary heading-main-secondary--blue margin-bottom-small">Main Dishes</h3>
+                    <ul class="section-menu__list">
+                        <li class="section-menu__item">
+                            <h5 class="section-menu__title">Steak n' Cheese Taco</h5>
+                            <p class="section-menu__description">3 flour tortilas filled with seared oyster mushrooms, cheese, diced lettuce, tomato & cashew sour cream (choice of soft or hard)</p>
+                            <span class="section-menu__price">$8.95</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 </body>
