--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                             <span class="section-menu__price">$9.95</span>
                         </li>
                         <li class="section-menu__item">
-                            <h5 class="section-menu__title"></h5>
-                            <p class="section-menu__description"></p>
+                            <h5 class="section-menu__title">Shroom Basket</h5>
+                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
                         </li>
                         <li class="section-menu__item">
                             <h5 class="section-menu__title"></h5>
