Started the location section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <section class="section-welcome">
             <h3 class="heading-main heading-main--blue">Welcome to TGIV!</h3>
         </section>
+
+        <!-- ABOUT SECTION -->
         <section class="section-about">
             <div class="section-about__text-box">
                 <h3 class="heading-main heading-main--white margin-bottom-small">About</h3>
@@ -69,16 +71,16 @@
                             <h5 class="section-menu__title margin-bottom-x-small">Chick'on Littles</h5>
                             <p class="section-menu__description">House made chick'on seitan double battered in 11 herbs & spices, fried to crunchy perfection. Served with house sauce of choice: Buffalo or Sesame Teryaki</p>
                             <div class="section-menu__choice-box margin-top-x-small">
-                                <div class="section-menu__chix-plain">
+                                <div class="section-menu__choice-item">
                                     <p class="section-menu__description">Plain:</p>
-                                    <span class="section-menu__price">4 pc. / $7.95</span><br>
-                                    <span class="section-menu__price">8 pc. / $13.95</span><br>
-                                    <span class="section-menu__price">12 pc. / $23.95</span><br>
+                                    <span class="section-menu__price">4 pc. / $7.95</span>
+                                    <span class="section-menu__price">8 pc. / $13.95</span>
+                                    <span class="section-menu__price">12 pc. / $23.95</span>
                                 </div>
-                                <div class="section-menu__chix-sauce">
+                                <div class="section-menu__choice-item">
                                     <p class="section-menu__description">With Sauce:</p>
-                                    <span class="section-menu__price">4 pc. / $8.95</span><br>
-                                    <span class="section-menu__price">8 pc. / $14.95</span><br>
+                                    <span class="section-menu__price">4 pc. / $8.95</span>
+                                    <span class="section-menu__price">8 pc. / $14.95</span>
                                     <span class="section-menu__price">12 pc. / $24.95</span>
                                 </div>
                             </div>
@@ -87,16 +89,16 @@
                             <h5 class="section-menu__title margin-bottom-x-small">Flautas</h5>
                             <p class="section-menu__description">Flour tortilas rolled around your choice of filling and fried.</p>
                             <div class="section-menu__choice-box margin-top-x-small">
-                                <div class="section-menu__cheese">
+                                <div class="section-menu__choice-item">
                                     <p class="section-menu__description">Cheeze:</p>
-                                    <span class="section-menu__price">2 pc. / $4.95</span><br>
-                                    <span class="section-menu__price">6 pc. / $9.75</span><br>
-                                    <span class="section-menu__price">12 pc. / $18.95</span><br>
+                                    <span class="section-menu__price">2 pc. / $4.95</span>
+                                    <span class="section-menu__price">6 pc. / $9.75</span>
+                                    <span class="section-menu__price">12 pc. / $18.95</span>
                                 </div>
-                                <div class="section-menu__meat">
+                                <div class="section-menu__choice-item">
                                     <p class="section-menu__description">Meat n Cheeze:</p>
-                                    <span class="section-menu__price">3 pc. / $5.95</span><br>
-                                    <span class="section-menu__price">6 pc. / $10.75</span><br>
+                                    <span class="section-menu__price">3 pc. / $5.95</span>
+                                    <span class="section-menu__price">6 pc. / $10.75</span>
                                     <span class="section-menu__price">12 pc. / $19.95</span>
                                 </div>
                             </div>
@@ -104,18 +106,43 @@
                         <li class="section-menu__item margin-bottom-small">
                             <h5 class="section-menu__title margin-bottom-x-small">Wangz</h5>
                             <p class="section-menu__description">House seasoned drumsticks with sugar cane "bone" in your style of choice:</p>
-                            <p class="section-menu__description">Country Fried, Sesame Teryaki or Buffalo</p>
+                            <p class="section-menu__description">Country Fried, Sesame Teryaki or Buffalo.</p>
                             <span class="section-menu__price">4 pc. / $8.95</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
+                            <h5 class="section-menu__title margin-bottom-x-small">Mucho Tofu</h5>
+                            <p class="section-menu__description">Seasoned tofu double battered and fried with house sauce of choice: Buffalo, Sesame Teryaki or Nashville.</p>
+                            <div class="section-menu__choice-box margin-top-x-small">
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">Plain:</p>
+                                    <span class="section-menu__price">$8.95</span>
+                                </div>
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">With Sauce:</p>
+                                    <span class="section-menu__price">$9.95</span>
+                                </div>
+                            </div>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
+                            <h5 class="section-menu__title margin-bottom-x-small">Sides</h5>
+                            <div class="section-menu__choice-box margin-top-x-small">
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">French Fries</p>
+                                    <span class="section-menu__price">$3.50</span>
+                                </div>
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">Yucca Fries</p>
+                                    <span class="section-menu__price">$4.50</span>
+                                </div>
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">Sweet Potato Fries</p>
+                                    <span class="section-menu__price">$4.25</span>
+                                </div>
+                                <div class="section-menu__choice-item">
+                                    <p class="section-menu__description">Tater Tots (seasonal)</p>
+                                    <span class="section-menu__price">$4.25</span>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -123,29 +150,36 @@
                     <h3 class="heading-main-secondary heading-main-secondary--brown margin-bottom-small">Main Dishes</h3>
                     <ul class="section-menu__list">
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
+                            <h5 class="section-menu__title margin-bottom-x-small">Steak n' Cheeze Tacos</h5>
+                            <p class="section-menu__description"> 3 flour tortilas with seared oyster mushrooms, cheeze, shredded lettuce & diced tomato topped with chashew sour cream. Choice of soft or hard.</p>
+                            <span class="section-menu__price">$8.95</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
+                            <h5 class="section-menu__title margin-bottom-x-small">Brekky Sammy</h5>
+                            <p class="section-menu__description">House made tofu scramble with cheeze & bacon. Served on a roll or a wrap.</p>
                             <span class="section-menu__price">$9.95</span>
+                            <span class="section-menu__price">add chorizo (seasonal) $1.00</span>
+                            <span class="section-menu__price">add hashbrown $1.25</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
+                            <h5 class="section-menu__title margin-bottom-x-small">Saucy Seitan</h5>
+                            <p class="section-menu__description">Thinly sliced house beefy seitan sautéed with caramelized onions & bell peppers. Served on a roll or a wrap.</p>
+                            <span class="section-menu__price">$12.95</span>
+                            <span class="section-menu__price">add cheeze $1.00</span>
+                            <span class="section-menu__price">add bacon $2.00</span>
+                            <span class="section-menu__price">add lettuce, tomato, onion $1.00</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
+                            <h5 class="section-menu__title margin-bottom-x-small">Crabby Sammy</h5>
+                            <p class="section-menu__description">Crabby patties, shredded lettuce & diced red onion with your choice of tartar sauce or house mayo. Served on a roll or a wrap. </p>
+                            <span class="section-menu__price">$11.95</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
+                            <h5 class="section-menu__title margin-bottom-x-small">Mr. TLT</h5>
+                            <p class="section-menu__description">Bacon, lettuce, tomato with house mayo. Served on a roll or a wrap.</p>
                             <span class="section-menu__price">$9.95</span>
+                            <span class="section-menu__price">add cheeze $1.00</span>
+                            <span class="section-menu__price">add avocado $1.35</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
                             <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
@@ -164,6 +198,17 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </section>
+        
+        <!-- HOURS AND LOCATION SECTION -->
+        <section class="section-hours-location">
+            <iframe class="section-hours-location__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d664.5845283694104!2d-74.27097163668898!3d41.362700594559314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3290b887f2ca9%3A0xa6ee3187d9cc74f1!2s9%20Winkler%20Pl%2C%20Chester%2C%20NY%2010918!5e0!3m2!1sen!2sus!4v1614470886665!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="section-hours-location__text-box">
+                <h3 class="heading-main heading-main--blue margin-bottom-small margin-top-small">Hours & Location</h3>
+                <p class="paragraph paragraph--blue">
+                    <a href="https://www.google.com/maps/place/9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!8m2!3d41.3627837!4d-74.2705903" class="section-hours-location__address">9 Winkler Pl, Chester, NY 10918</a>
+                </p>
             </div>
         </section>
     </main>
