added costumized map to location section

--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
         
         <!-- HOURS AND LOCATION SECTION -->
         <section class="section-hours-location">
-            <iframe class="section-hours-location__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d664.5845283694104!2d-74.27097163668898!3d41.362700594559314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3290b887f2ca9%3A0xa6ee3187d9cc74f1!2s9%20Winkler%20Pl%2C%20Chester%2C%20NY%2010918!5e0!3m2!1sen!2sus!4v1614470886665!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
             <div class="section-hours-location__text-box">
-                <h3 class="heading-main heading-main--blue margin-bottom-small margin-top-small">Hours & Location</h3>
+                <h3 class="heading-main heading-main--brown margin-bottom-small margin-top-small">Hours & Location</h3>
                 <p class="paragraph paragraph--blue">
-                    <a href="https://www.google.com/maps/place/9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!8m2!3d41.3627837!4d-74.2705903" class="section-hours-location__address">9 Winkler Pl, Chester, NY 10918</a>
+                    <a class="section-hours-location__link" target="_blank"href="https://www.google.com/maps/place/9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!8m2!3d41.3627837!4d-74.2705903">9 Winkler Pl, Chester, NY 10918</a>
                 </p>
             </div>
         </section>
