finished hours-location section

--- a/index.html
+++ b/index.html
@@ -205,9 +205,15 @@
         <section class="section-hours-location">
             <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
             <div class="section-hours-location__text-box">
-                <h3 class="heading-main heading-main--brown margin-bottom-small margin-top-small">Hours & Location</h3>
+                <h3 class="heading-main heading-main--brown margin-bottom-med margin-top-lg">Hours & Location</h3>
                 <p class="paragraph paragraph--blue">
                     <a class="section-hours-location__link" target="_blank"href="https://www.google.com/maps/place/9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!8m2!3d41.3627837!4d-74.2705903">9 Winkler Pl, Chester, NY 10918</a>
+                    <a href="tel:(845)469-4423" target="_blank" class="section-hours-location__link">(845)469-4423</a>
+                </p>
+                <a href="https://www.google.com/maps/dir//9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!2m2!1d-74.2705903!2d41.3627837!3e0" target="_blank" class="btn btn--blue margin-top-small margin-bottom-med">Get Directions</a>
+               <p class="paragraph paragraph--brown margin-top-small">
+                   <span class="section-hours-location__hours">Wednesday-Saturady: 12pm-7pm</span>
+                   <span class="section-hours-location__hours">Sunday: 10am-5pm</span>
                 </p>
             </div>
         </section>
