added parallax transition scroll

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
             </div>
         </section>
-        
+        <div class="parallax-transition parallax-transition--donuts"></div>
         <!-- HOURS AND LOCATION SECTION -->
         <section class="section-hours-location">
             <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
