added links to svg icons

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         </div>
         <div class="top-bar__icon-box">
             <svg class="top-bar__icon">
-                <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                <a href="https://www.facebook.com/Thankgoodnessitsvegan/" target="_blank" class="top-bar__icon">
+                    <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </a>
             </svg>
             <svg class="top-bar__icon">
-                <use xlink:href="img/sprite.svg#icon-instagram"></use>
+                <a href="https://www.instagram.com/thankgoodnessitsvegan/" target="_blank" class="top-bar__icon">
+                    <use xlink:href="img/sprite.svg#icon-instagram"></use>
+                </a>
             </svg>
         </div>
     </div>
