Working on dropdown nav (wip)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
             </svg>
         </div>
     </div>
+    
+     <!-- NAV SECTION -->
+     <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+        
+        <label for="nav-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link">About</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Menu</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Hours & Location</a></li>
+            </ul>
+        </nav>
+    </div>
     <!-- HERO SECTION -->
     <header class="header">
         <div class="header__text-box">
@@ -33,8 +51,10 @@
             <h2 class="heading-secondary">Anything You Can Do I Can Do Vegan!</h2>
         </div>
     </header>
+
     <!-- MAIN PAGE -->
     <main>
+
         <!-- WELCOME -->
         <section class="section-welcome">
             <h3 class="heading-main heading-main--blue">Welcome to TGIV!</h3>
@@ -205,6 +225,7 @@
             </div>
         </section>
         <div class="parallax-transition parallax-transition--donuts"></div>
+
         <!-- HOURS AND LOCATION SECTION -->
         <section class="section-hours-location">
             <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
