--- a/index.html
+++ b/index.html
@@ -41,21 +41,6 @@
         </div>
     </div>
 
-     <!-- NAV SECTION
-     <div class="navigation">
-        <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
-    
-        <label for="nav-toggle" class="navigation__button">
-            <span class="navigation__icon">&nbsp;</span>
-        </label>
-        <nav class="navigation__nav">
-            <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Menu</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Hours & Location</a></li>
-            </ul>
-        </nav>
-    </div> -->
     <!-- HERO SECTION -->
     <header class="header">
         <div class="header__text-box">
@@ -236,6 +221,7 @@
                 </div>
             </div>
         </section>
+        <!-- PARALLAX TRANSITION -->
         <div class="parallax-transition parallax-transition--donuts"></div>
 
         <!-- HOURS AND LOCATION SECTION -->
@@ -252,6 +238,15 @@
                    <span class="section-hours-location__hours">Wednesday-Saturady: 12pm-7pm</span>
                    <span class="section-hours-location__hours">Sunday: 10am-5pm</span>
                 </p>
+            </div>
+        </section>
+
+        <!-- PARALLAX TRANSITION -->
+        <section class="section-catering parallax-transition parallax-transition--fried">
+            <div class="section-catering__text-box">
+                <h3 class="heading-main heading-main--white margin-bottom-small">Catering</h3>
+                <p class="paragraph paragraph--white margin-top-small">Looking to cater your next party? Need a custom made vagan cake?</p>
+                
             </div>
         </section>
     </main>
