added catering and contact section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="navigation__item"><a href="#" class="navigation__link">About</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Menu</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Hours & Location</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Catering</a></li>
             </ul>
         </nav>
     </div>
@@ -221,8 +222,15 @@
                 </div>
             </div>
         </section>
+
+        <!-- PICK-UP-INFO-SECTION -->
+        <section class="section-pick-up-info">
+            <p class="paragraph paragraph--white">Call ahead for a pick-up or come dine with us!</p>
+            <a href="tel:(845)469-4423" target="_blank" class="section-pick-up-info__link">(845)469-4423</a>
+        </section>
+        
         <!-- PARALLAX TRANSITION -->
-        <div class="parallax-transition parallax-transition--donuts"></div>
+        <div class="parallax-transition parallax-transition--fried"></div>
 
         <!-- HOURS AND LOCATION SECTION -->
         <section class="section-hours-location">
@@ -241,12 +249,20 @@
             </div>
         </section>
 
-        <!-- PARALLAX TRANSITION -->
-        <section class="section-catering parallax-transition parallax-transition--fried">
+         <!-- PARALLAX TRANSITION -->
+         <div class="parallax-transition parallax-transition--donuts"></div>
+
+        <!-- CATERING SECTION -->
+        <section class="section-catering parallax-transition parallax-transition--catering-burger">
             <div class="section-catering__text-box">
-                <h3 class="heading-main heading-main--white margin-bottom-small">Catering</h3>
-                <p class="paragraph paragraph--white margin-top-small">Looking to cater your next party? Need a custom made vagan cake?</p>
-                
+                <h3 class="heading-main heading-main--white margin-bottom-small">Catering & Contact</h3>
+                <p class="paragraph paragraph--white paragraph--bold margin-top-small">Looking to cater your next party?</p>
+                <p class="paragraph paragraph--white paragraph--bold margin-top-small">Need a custom made vagan cake?</p>
+                <p class="paragraph paragraph--white paragraph--bold margin-top-small">Just want to say hey?</p>
+                <p class="paragraph paragraph--white paragraph--bold margin-top-small">Give us a call at:</p>
+                <a href="tel:(845)469-4423" target="_blank" class="section-catering__link">(845)469-4423</a>
+                <p class="paragraph paragraph--white paragraph--bold margin-top-small">Or shoot us an e-mail:</p>
+                <a href="mailto:thankgoodnessitsvegan@outlook.com" target="_blank" class="section-catering__link">thankgoodnessitsvegan@outlook.com</a>
             </div>
         </section>
     </main>
