Updated the menu section

--- a/index.html
+++ b/index.html
@@ -204,21 +204,43 @@
                             <span class="section-menu__price">add avocado $1.35</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
+                            <h5 class="section-menu__title margin-bottom-x-small">Buffalo Soldier Wrap</h5>
+                            <p class="section-menu__description">Choice of Nashville chick'on or tofu with shredded lettuce & house ranch wrapped in two flour tortilas.</p>
+                            <span class="section-menu__price">$16.95</span>
+                        </li>
+                        <li class="section-menu__item margin-bottom-small">
+                            <h5 class="section-menu__title margin-bottom-x-small">Oyster Po'Boy</h5>
+                            <p class="section-menu__description">Fried oyster mushroom petals on a roll with shredded lettuce & red onions with a choice of house tartar or house mayo.</p>
                             <span class="section-menu__price">$9.95</span>
                         </li>
                         <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
-                            <span class="section-menu__price">$9.95</span>
-                        </li>
-                        <li class="section-menu__item margin-bottom-small">
-                            <h5 class="section-menu__title margin-bottom-x-small">Shroom Basket</h5>
-                            <p class="section-menu__description">Oyster mushroom petals battered & fried to cripy perfection served with house tartar dipping sauce</p>
+                            <h5 class="section-menu__title margin-bottom-x-small">Chick'on Sammy</h5>
+                            <p class="section-menu__description">Battered & fried in 12 herbs and spices. Served on a roll or a wrap with you rchoice of lettuce, tomato, house hunnie mustard or mayo.</p>
                             <span class="section-menu__price">$9.95</span>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="section-menu__desserts">
+                <h3 class="heading-main-secondary heading-main-secondary--brown margin-bottom-x-small">Desserts</h3>
+                <p class="section-menu__description section-menu__description--dessert margin-bottom-small">*These are only some of our choices, we make baked goods seasonally and daily. Call us to see what we have baking today!</p>
+                <div class="section-menu__dessert-container margin-bottom-x-small">
+                    <div class="section-menu__dessert-item">
+                        <h5 class="section-menu__title margin-bottom-x-small">Cake slice</h5>
+                        <span class="section-menu__price section-menu__price">$6</span>
+                    </div>
+                    <div class="section-menu__dessert-item">
+                        <h5 class="section-menu__title margin-bottom-x-small">Whoopies</h5>
+                        <span class="section-menu__price section-menu__price">$5</span>
+                    </div>
+                    <div class="section-menu__dessert-item">
+                        <h5 class="section-menu__title margin-bottom-x-small">Brownies</h5>
+                        <span class="section-menu__price section-menu__price">$5</span>
+                    </div>
+                    <div class="section-menu__dessert-item">
+                        <h5 class="section-menu__title margin-bottom-x-small">Pecan sticky bun</h5>
+                        <span class="section-menu__price section-menu__price">$6.95</span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -266,7 +288,7 @@
             </div>
         </section>
     </main>
-    
+
     <script src="scripts.js"></script>
 </body>
 </html>
