added fade-in on scroll to each section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- HERO SECTION -->
-    <header class="header">
+    <header class="header fade-in">
         <div class="header__text-box">
             <h1 class="heading-primary">Thank Goodness It's Vegan</h1>
             <h2 class="heading-secondary">Anything You Can Do I Can Do Vegan!</h2>
@@ -54,12 +54,12 @@
     <main>
 
         <!-- WELCOME -->
-        <section class="section-welcome">
+        <section class="section-welcome fade-in">
             <h3 class="heading-main heading-main--blue">Welcome to TGIV!</h3>
         </section>
 
         <!-- ABOUT SECTION -->
-        <section class="section-about" id="about">
+        <section class="section-about fade-in" id="about">
             <div class="section-about__text-box">
                 <h3 class="heading-main heading-main--white margin-bottom-small">About</h3>
                 <p class="paragraph paragraph--white">Thank Goodness It's Vegan started out as a food truck located in Chester NY.  Exactly one year later, TGIV, the restaurant opened! Serving up 100% vegan food that is more than just a standard salad.</p>
@@ -68,7 +68,7 @@
         </section>
 
         <!-- MENU SECTION -->
-        <section class="section-menu" id="menu">
+        <section class="section-menu fade-in" id="menu">
             <h3 class="heading-main heading-main--blue margin-bottom-small margin-top-small">Menu</h3>
             <div class="section-menu__container">
                 <div class="section-menu__starters">
@@ -246,16 +246,16 @@
         </section>
 
         <!-- PICK-UP-INFO-SECTION -->
-        <section class="section-pick-up-info">
+        <section class="section-pick-up-info fade-in">
             <p class="paragraph paragraph--white">Call ahead for a pick-up or come dine with us!</p>
             <a href="tel:(845)469-4423" target="_blank" class="section-pick-up-info__link">(845)469-4423</a>
         </section>
 
         <!-- PARALLAX TRANSITION -->
-        <div class="parallax-transition parallax-transition--fried"></div>
+        <div class="parallax-transition parallax-transition--fried fade-in"></div>
 
         <!-- HOURS AND LOCATION SECTION -->
-        <section class="section-hours-location" id="hours-and-location">
+        <section class="section-hours-location fade-in" id="hours-and-location">
             <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
             <div class="section-hours-location__text-box">
                 <h3 class="heading-main heading-main--brown margin-bottom-med margin-top-lg">Hours & Location</h3>
@@ -272,10 +272,10 @@
         </section>
 
          <!-- PARALLAX TRANSITION -->
-         <div class="parallax-transition parallax-transition--donuts"></div>
+         <div class="parallax-transition parallax-transition--donuts fade-in"></div>
 
         <!-- CATERING SECTION -->
-        <section class="section-catering parallax-transition parallax-transition--catering-burger" id="catering-and-contact">
+        <section class="section-catering parallax-transition parallax-transition--catering-burger fade-in" id="catering-and-contact">
             <div class="section-catering__text-box">
                 <h3 class="heading-main heading-main--white margin-bottom-small">Catering & Contact</h3>
                 <p class="paragraph paragraph--white paragraph--bold margin-top-small">Looking to cater your next party?</p>
@@ -287,6 +287,7 @@
                 <a href="mailto:thankgoodnessitsvegan@outlook.com" target="_blank" class="section-catering__link">thankgoodnessitsvegan@outlook.com</a>
             </div>
         </section>
+        
     </main>
 
     <script src="scripts.js"></script>
